<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse110mt13.tritonprofessorraterv1.AddProf"
    tools:showIn="@layout/activity_add_prof"
    android:background="@mipmap/b26">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="cse110mt13.tritonprofessorraterv1.AddProf"
        tools:showIn="@layout/activity_add_prof">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profname"
            android:id="@+id/name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/ap_name_ET"
            android:layout_toStartOf="@+id/ap_name_ET"
            android:layout_alignParentTop="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ap_name_ET"
            android:layout_toRightOf="@+id/course"
            android:layout_alignBottom="@+id/name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ap_course_ET"
            android:layout_alignTop="@+id/course"
            android:layout_alignLeft="@+id/ap_name_ET"
            android:layout_alignStart="@+id/ap_name_ET"
            android:layout_alignRight="@+id/ap_name_ET"
            android:layout_alignEnd="@+id/ap_name_ET"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/coursename"
            android:id="@+id/course"
            android:layout_below="@+id/name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment"
            android:id="@+id/comment"
            android:layout_marginTop="76dp"
            android:layout_below="@+id/easiness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rating"
            android:id="@+id/rating"
            android:layout_below="@+id/ap_course_ET"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/easiness"
            android:id="@+id/easiness"
            android:layout_below="@+id/rating"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/Animation.AppCompat.DropDownUp"
            android:textColor="#635959" />


        <EditText
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/ap_comment_ET"
            android:gravity="top"
            android:background="@drawable/rectangle_drawable_back"
            android:layout_below="@+id/comment"
            android:layout_alignRight="@+id/ap_course_ET"
            android:layout_alignEnd="@+id/ap_course_ET"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button7"
            android:text="@string/submit"
            android:id="@+id/ap_sumbit_B"
            android:layout_below="@+id/ap_comment_ET"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button7"
            android:text="@string/cancel"
            android:id="@+id/ap_cancel_B"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/comment"
            android:layout_toEndOf="@+id/comment" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/clarity"
            android:id="@+id/clarity"
            android:layout_below="@+id/easiness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textColor="#635959"
            android:textColorHighlight="#3f9fe8"
            android:textColorHint="#e97910" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/helpfulness"
            android:id="@+id/helpfulness"
            android:layout_below="@+id/clarity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textColor="#635959" />

        <RatingBar
            android:layout_width="110dp"
            android:layout_height="22dp"
            android:id="@+id/ap_RatingE"
            android:numStars="5"
            android:rating="1"
            android:stepSize="0.5"
            android:layout_alignTop="@+id/easiness"
            android:layout_toRightOf="@+id/easiness"
            android:layout_toEndOf="@+id/easiness"
            style="@style/newRatingBar"/>

        <RatingBar
            android:layout_width="110dp"
            android:layout_height="22dp"
            android:id="@+id/ap_RatingC"
            android:layout_alignTop="@+id/clarity"
            android:layout_toRightOf="@+id/clarity"
            android:layout_toEndOf="@+id/clarity"
            android:numStars="5"
            android:rating="1"
            android:stepSize="0.5"
            style="@style/newRatingBar"/>

        <RatingBar
            android:layout_width="110dp"
            android:layout_height="22dp"
            android:id="@+id/ap_RatingH"
            android:layout_alignTop="@+id/helpfulness"
            android:layout_toRightOf="@+id/helpfulness"
            android:layout_toEndOf="@+id/helpfulness"
            android:numStars="5"
            android:rating="1"
            android:stepSize="0.5"
            style="@style/newRatingBar"/>

    </RelativeLayout>
</ScrollView>