...
        android:layout_height="match_parent" />

    <Button
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="Search"
        android:id="@+id/search_B"
        android:layout_alignTop="@+id/search_ET"
        android:layout_alignParentRight="true"
        android:background="@drawable/button7"
        android:layout_alignParentEnd="true"
        android:textColor="#4c515f" />

    <EditText
...
        android:layout_toStartOf="@+id/search_B" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_B" />

</RelativeLayout>
...
