<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse110mt13.tritonprofessorraterv1.SearchPage"
    tools:showIn="@layout/activity_search_page">

    <Button
        android:text="@string/searchText"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/button7"
        android:textColor="#4c515f"
        android:id="@+id/search_B"
        android:layout_alignBottom="@+id/search_ET"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/search_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/search_B"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button7"
        android:text="@string/addProf"
        android:id="@+id/sp_AddProf_B"
        android:textColor="#4c515f"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_B"
        android:layout_alignEnd="@+id/search_B"
        android:layout_marginBottom="41dp"
        android:onClick="ForwardToAddProf" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewSearch_page"
        android:layout_below="@+id/search_ET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/sp_AddProf_B" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROF_NAME"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:id="@+id/bProf1"
        android:layout_below="@+id/search_ET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Easiness:&#10;Helpfulness:&#10;Clarity:"
        android:background="@drawable/rectangle_drawable_back"
        android:textColor="#000000"
        android:id="@+id/textView1"
        android:layout_below="@+id/bProf1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/search_B"
        android:layout_alignEnd="@+id/search_B" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROF_NAME"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:id="@+id/bProf2"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Easiness:&#10;Helpfulness:&#10;Clarity:"
        android:background="@drawable/rectangle_drawable_back"
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_below="@+id/bProf2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/search_B"
        android:layout_alignEnd="@+id/search_B" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROF_NAME"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:id="@+id/bProf3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Easiness:&#10;Helpfulness:&#10;Clarity:"
        android:background="@drawable/rectangle_drawable_back"
        android:textColor="#000000"
        android:id="@+id/textView3"
        android:layout_below="@+id/bProf3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addProf"
        android:id="@+id/sp_AddProf_B"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
-->
</RelativeLayout>