...
    <string name="title_activity_add_prof">Add a Professor</string>
    <string name="title_activity_search_page">Search</string>
    <string name="title_activity_add_comment">Add a Rating</string>

    <string name="addProf">Add New Professor</string>
    <string name="addRating">Add A Rating</string>
    <string name="cancel">Cancel</string>
    <string name="clarity">Clarity: </string>
    <string name="comment">Comment:</string>
    <string name="createAcc">Create Account</string>
    <string name="coursename">Course Name</string>
    <string name="easiness">Easiness: </string>
    <string name="email">UCSD Email</string>

    <string name="helpfulness">Helpfulness: </string>
    <string name="login_B">Login</string>
    <string name="findUser">Reset Password</string>

    <string name="search">Class/Professor Name</string>
    <string name="searchText">Search</string>

...
    <string name="password">Password</string>
    <string name="profname">Prof Name</string>


    <string name="submit">Submit</string>

    <string name="rating">Ratings:</string>
    <string name="noAcc">No account yet? Create one</string>
    <string name="haveAcc">Have account already? Login</string>
    <string name="remember">Remember your password? Login</string>
    <string name="forget_pw">Forget your password? Click here</string>
    <string name="username">Username</string>

...
